Duplicates of linked groups/collections with proxy armatures no longer function independantly in separate scenes #65134

Closed
opened 2019-05-26 01:35:15 +02:00 by Dan · 5 comments

System Information
Operating system: Windows 7 64
Graphics card: nVidia GeForce GTX 970

Blender Version
Broken: 2.80.72, e1d1899e72, 2019-5-25
Worked: 2.79b official release

Short description of error
In 2.79b you can have duplicates of linked groups with proxy armatures as long as they were in separate scenes. This could be done either by creating a new scene and linking the group again or by copying a scene containing the data.

In 2.8 all instances of linked collections are shared and only one proxy armature effects the linked collection regardless of the data being in separate scenes.

Exact steps for others to reproduce the error
The attached file "Proxy System Regression - Source File" contains the linked data used in the other attatched file "Proxy System Regression - Linked Data File".

Opening the latter file in 2.79b, each of the two scenes has the group instanced and a proxy armature deforming it in a different way. In 2.8 however, only one deformation from one proxy armature takes place across any scene. You can also attempt to link the group/collection in a new file and add a proxy armature but the result when attempting to create a duplicate scene or link the data again will work as previously described.

Proxy System Regression - Source File.blend

Proxy System Regression - Linked Data File.blend

**System Information** Operating system: Windows 7 64 Graphics card: nVidia GeForce GTX 970 **Blender Version** Broken: 2.80.72, e1d1899e7290, 2019-5-25 Worked: 2.79b official release **Short description of error** In 2.79b you can have duplicates of linked groups with proxy armatures as long as they were in separate scenes. This could be done either by creating a new scene and linking the group again or by copying a scene containing the data. In 2.8 all instances of linked collections are shared and only one proxy armature effects the linked collection regardless of the data being in separate scenes. **Exact steps for others to reproduce the error** The attached file "Proxy System Regression - Source File" contains the linked data used in the other attatched file "Proxy System Regression - Linked Data File". Opening the latter file in 2.79b, each of the two scenes has the group instanced and a proxy armature deforming it in a different way. In 2.8 however, only one deformation from one proxy armature takes place across any scene. You can also attempt to link the group/collection in a new file and add a proxy armature but the result when attempting to create a duplicate scene or link the data again will work as previously described. [Proxy System Regression - Source File.blend](https://archive.blender.org/developer/F7068755/Proxy_System_Regression_-_Source_File.blend) [Proxy System Regression - Linked Data File.blend](https://archive.blender.org/developer/F7068756/Proxy_System_Regression_-_Linked_Data_File.blend)
Author

Added subscriber: @DoNotCare

Added subscriber: @DoNotCare

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2019-05-27 17:42:42 +02:00

@Sergey we need your depsgraph relations lights here I think… Am not sure why that behavior should not be possible in 2.80 (would not expect both depsgraphs to share some evaluation? And would expect each deg to check own proxy from own scene, not use proxy from the other scene…).

Btw, checked, we get 'correct' behavior with both old and new depsgraphs in 2.79…

@Sergey we need your depsgraph relations lights here I think… Am not sure why that behavior should not be possible in 2.80 (would not expect both depsgraphs to share some evaluation? And would expect each deg to check own proxy from own scene, not use proxy from the other scene…). Btw, checked, we get 'correct' behavior with both old and new depsgraphs in 2.79…

This issue was referenced by eac0f35845

This issue was referenced by eac0f3584545e9e5d9674d2fd9b74c256ce841f3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65134
No description provided.